manifests/reactjs/reactjs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactjs
  template:
    metadata:
      labels:
        app: reactjs
    spec:
      containers:
      - name: reactjs
        image: your-react-image:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: reactjs
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: reactjs
  type: NodePort
