manifests/reactjs/reactjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactjs
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
  selector:
    app: reactjs
