manifests/reactjs/reactjs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactjs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: pikapi.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reactjs
            port:
              number: 80
  tls:
  - hosts:
    - pikapi.co
    secretName: pikapi-co-tls
